--- a/GiftForGood/views/user/confirm-details.ejs
+++ b/GiftForGood/views/user/confirm-details.ejs
@@ -65,7 +65,7 @@
                             <% if (product['Google Shopping / Custom Label 1']) { %>
                             <h5>You’re supporting:</h5>
                             <p>
-                                <img src="/resources/images/icons/hart.png" alt="icon"/>
+                                <img src="<%= product['Google Shopping / Custom Label 3'] %>" alt="icon"/>
                                 <%= product['Google Shopping / Custom Label 1'] %>
                             </p>
                             <% } %>
