--- a/GiftForGood/views/user/single-product.ejs
+++ b/GiftForGood/views/user/single-product.ejs
@@ -18,62 +18,33 @@
             <div class="col-md-5">
                 <div class="product_slide_area">
                     <div class="product_slide_1">
+                        <% for (let i = 0; i < 5; i++) { %>
                         <div>
                             <div class="product_slide_item">
-                                <img src="/resources/images/products/p1.png" alt="logo"/>
+                                <img src="<%= gift['_chosen']['Image Src'] %>" alt="logo"/>
                             </div>
                         </div>
-                        <div>
-                            <div class="product_slide_item">
-                                <img src="/resources/images/products/25.png" alt="logo"/>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="product_slide_item">
-                                <img src="/resources/images/products/6.png" alt="logo"/>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="product_slide_item">
-                                <img src="/resources/images/products/11.png" alt="logo"/>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="product_slide_item">
-                                <img src="/resources/images/products/29.png" alt="logo"/>
-                            </div>
-                        </div>
+                        <% } %>
                     </div>
                     <div class="product_slide_2">
+                        <% for (let i = 0; i < 5; i++) { %>
                         <div>
-                            <img src="/resources/images/slide/1.png" alt="logo"/>
+                            <img src="<%= gift['_chosen']['Image Src'] %>" alt="logo"/>
                         </div>
-                        <div>
-                            <img src="/resources/images/slide/2.png" alt="logo"/>
-                        </div>
-                        <div>
-                            <img src="/resources/images/slide/3.png" alt="logo"/>
-                        </div>
-                        <div>
-                            <img src="/resources/images/slide/4.png" alt="logo"/>
-                        </div>
-                        <div>
-                            <img src="/resources/images/slide/5.png" alt="logo"/>
-                        </div>
+                        <% } %>
                     </div>
                 </div>
             </div>
             <div class="col-md-7">
                 <div class="product_sec_item">
                     <div class="product_sec_item_info">
-                        <h3>Don Javier Handcrafted Briefcase</h3>
+                        <h3><%= gift['_chosen']['Title'] %></h3>
                         <h5>
-                            <img src="/resources/images/icons/hart-2.png" alt="img"/>  Every purchase provides 7 days of schooling for a child in Honduras
+                            <img src="<%= gift['_chosen']['Google Shopping / Custom Label 3'] %>" alt="img"/>
+                            <%= gift['_chosen']['Google Shopping / Custom Label 1'] %>
                         </h5>
                         <p>
-                            A great gift for men of all ages, this premium leather briefcase features 2 large interior
-                            sections, 1 small front pocket, and an adjustable shoulder strap. Handcrafted by one
-                            Honduran artisan from start to finish.
+                            <%- gift['_chosen']['short-desc'] %>
                         </p>
                         <h4>OPTIONS</h4>
                         <ul>
@@ -89,7 +60,7 @@
                         </ul>
                     </div>
                     <div class="product_sec_btn_1">
-                        <button type="button" class="btn common_btn">CLAIM YOUR GIFT</button>
+                        <button type="button" class="btn common_btn" id="claim-gift">CLAIM YOUR GIFT</button>
                     </div>
                     <div class="product_sec_collaps">
                         <div class="accordion">
@@ -105,9 +76,7 @@
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne">
                                     <div class="card-body">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Turpis in accumsan morbi nullam. Consectetur nibh pharetra aenean volutpat est pulvinar pretium. Tellus ultrices egestas facilisi mauris.
-                                            <br/>
-                                            Quis urna posuere purus sapien. Urna in nunc euismod neque ultricies hendrerit tortor aliquet. Turpis aliquam id diam aliquam non. Ornare imperdiet feugiat tortor consequat turpis.
+                                            <%- gift['_chosen']['long-desc'] %>
                                         </p>
                                     </div>
                                 </div>
@@ -191,8 +160,6 @@
                 <div class="gift_impact_content">
                     <p>
                         Mission Lazarus takes a comprehensive approach to development that includes education, medical care, and vocational training programs.  Students in vocational training programs receive wages for their work as well as formal schooling and, in turn, the opportunity for a better future.
-
-
                     </p>
                     <p>
                         Students are trained in sewing, leather working, boot making, carpentry, or coffee farming. Additional proceeds provide  education for children in-need.
@@ -208,6 +175,33 @@
 
 <% include ../partials/footer.ejs %>
 <% include ../partials/foot.ejs %>
+
+<script type="text/javascript">
+	$('.product_slide_1').slick({
+		slidesToShow: 1,
+		slidesToScroll: 1,
+		arrows: false,
+		fade: true,
+		asNavFor: '.product_slide_2'
+	});
+	$('.product_slide_2').slick({
+		slidesToShow: 3,
+		slidesToScroll: 1,
+		asNavFor: '.product_slide_1',
+		dots: true,
+		centerMode: true,
+		focusOnSelect: true
+	});
+
+	let gift = <%- JSON.stringify(gift) %>
+
+    $('#claim-gift').on('click', function () {
+        window.location.href = '/product/detail?gid=' + gift['_id'];
+    });
+    $('#backto-gifts').on('click', function () {
+        window.location.href = '/collections?gid=' + gift['_id'];
+    });
+</script>
 
 </body>
 </html>
