Feat: Add client dashboard pages

--- a/GiftForGood/views/partials/error.ejs
+++ b/GiftForGood/views/partials/error.ejs
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<% include head.ejs %>
+<% include ../partials/head.ejs %>
 
-<body data-sa-theme="4">
-<section class="error">
+<body>
+
+<div class="" style="text-align: center; padding: 56px 15px;">
+    <a href="#"><img src="/resources/images/logo-2.png" alt="logo"/></a>
+</div>
+
+<section class="error" style="padding-bottom: 200px;">
     <div class="error__inner text-center">
-        <h1>404</h1>
         <h2>The page you were looking for doesn't exist!</h2>
         <a href="/">Go to Home Page</a>
     </div>
 </section>
 
-<% include foot.ejs %>
+<% include ../partials/footer.ejs %>
+<% include ../partials/foot.ejs %>
+
+<script>
+
+</script>
 
 </body>
 </html>
