--- a/GiftForGood/views/partials/header.ejs
+++ b/GiftForGood/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <a href="#"><img src="/resources/images/logo-g.png"/></a>
+                <a href="/"><img src="/resources/images/logo-g.png"/></a>
                 <h2>Where should we send <span>your</span> gift?</h2>
             </div>
         </div>
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <a href="#"><img src="/resources/images/logo-g.png"/></a>
+                <a href="/"><img src="/resources/images/logo-g.png"/></a>
                 <h2>THANK YOU <span>for</span> DOING GOOD!</h2>
                 <p>We will send you an email when your gift ships.</p>
             </div>
@@ -28,7 +28,7 @@
     <div class="container-fluid">
         <% if (page_type === 'gift-step-page') { %>
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand logo_main" href="#"><img src="/resources/images/logo.png" alt="logo"/></a>
+                <a class="navbar-brand logo_main" href="/"><img src="/resources/images/logo.png" alt="logo"/></a>
 
                 <div class="navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
@@ -98,11 +98,11 @@
         <% } else if (page_title === 'collections') { %>
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand google_logo" href="#"><img src="/resources/images/google.png" alt="Google logo"/></a>
-                <a class="navbar-brand logo_main" href="#"><img src="/resources/images/logo.png" alt="logo"/></a>
+                <a class="navbar-brand logo_main" href="/"><img src="/resources/images/logo.png" alt="logo"/></a>
             </nav>
         <% } else if (page_title === 'single-product' || page_title === 'product-detail') { %>
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand logo_main" href="#"><img src="/resources/images/logo.png" alt="logo"/></a>
+                <a class="navbar-brand logo_main" href="/"><img src="/resources/images/logo.png" alt="logo"/></a>
                 <div class="navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
